    - Closes #4220.
  - Fix cancelling a spawn causing an NPE.
    - Closes #4218.
  - Fix being able to confirm cancelled confirmations.
  - Clean up HelpMenu, courtesy of silverwolfg11 with PR #4223.
  - Fix new day task not collecting taxes properly, courtesy of silverwolfg11 with PR #4225.
0.96.2.10:
  - Prevent residents from being able to unclaim homeblocks, courtesy of silverworlfg11 with PR #4228.
    - Closes #4231.
  - Fix ClassNotFound exception due to old bungeecord version, courtesy of silverwolfg11 with PR #4238.
  - Fix taxes being below 0, courtesy of silverwolfg11 with PR #4243.
  - Fix economy bug with town confirmation, courtesy of silverwolfg11 with PR #4241.
  - GM Source fetching player suffix instead of prefix, courtesy of ElgarL with PR #4247.
    - Also fixes GM repo and solves issue with building Towny from source.
  - Update Reserve/TheNewChat maven repositories, courtesy of creatorfromhell with PR #4240.
0.96.2.11:
  - Fix shaded dependencies, courtesy of silverwolfg11 with PR #4254.
  - Fix global_town_settings.maximum_number_residents_without_nation not actually accounting for a town that does have a nation.
    - Closes #4249.
  - Fix a town moving the homeblock, nations changing their capital city not removing out-of-range towns when the nation-requires-proximity feature is enabled.
    - Closes #4248.
  - Fix colour codes in resident titles/surnames carrying on in the resident list seen on the /town status screens.
    - Closes #4250.
  - Correctly translate "allow explosion" in Chinese, courtesy of ishland with PR #4252.
  - Concurrency QOL, courtesy of Siris with PR #4256.
    - Improves locking of database for reads and writes in regards to synchronization.
  - Remove exception printing stacktrace from invalid name in getTown(), courtesy of Siris with PR #4259.
    - Closes #4257.
  - Hotfix/bankcap bug, courtesy of Siris with PR #4260.
    - Closes #4253.